Get appointments for tenant